--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -267,3 +267,35 @@ jobs:
           REDIS_CACHE_URL: ${{ secrets.REDIS_CACHE_URL }}
           VPC_CONNECTOR_NAME: ${{ secrets.VPC_CONNECTOR_NAME }}
         run: ./ops/deploy/deploy_module.sh src/api.yaml
+  deploy-tasks-io:
+    name: Deploy Tasks IO Service
+    runs-on: ubuntu-latest
+    needs: [py3-type, py3-lint, py3-test, deploy-queues]
+    if: contains(github.event.commits[0].message, '[nodeploy]') == false
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 3.8
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Setup Google Cloud Platform
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          version: "321.0.0"
+          project_id: ${{ secrets.GCLOUD_PROJECT_ID }}
+          service_account_key: ${{ secrets.GCLOUD_AUTH }}
+      - name: Deploy
+        env:
+          REDIS_CACHE_URL: ${{ secrets.REDIS_CACHE_URL }}
+          VPC_CONNECTOR_NAME: ${{ secrets.VPC_CONNECTOR_NAME }}
+        run: ./ops/deploy/deploy_module.sh src/tasks_io.yaml
