Support Google Cloud Tasks

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,17 @@
+beautifulsoup4==4.9.2
 black==20.8b1
 flake8==3.8.4
 flake8-import-order
+blinker==1.4
+fakeredis
+freezegun==1.0.0
+InMemoryCloudDatastoreStub
 pre-commit
 pyre-check==0.0.58
 pytest
 pytest-cov
 pytest-custom_exit_code
 pytest-testmon
-InMemoryCloudDatastoreStub
-beautifulsoup4
-freezegun
-requests-mock
-blinker==1.4
 redis==3.5.3
-fakeredis
+rq-dashboard
+requests-mock
