--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,12 +1,15 @@
 gunicorn==20.0.4
 firebase_admin==4.5.0
 Flask==1.1.2
+Flask-WTF==0.14.3
 google-api-python-client==1.12.8
 google-cloud-ndb==1.7.2
+google-cloud-tasks==2.0.0
 grpcio==1.34.0
+numpy==1.19.4
 oauth2client==4.1.3
 pyre-extensions==0.0.19
+requests==2.25.0
+rq==1.6.1
 typing-extensions==3.7.4.3
-requests==2.25.1
-numpy==1.19.4
-Flask-WTF==0.14.3
+PyYAML==5.3.1
