--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 filterwarnings =
+    ignore::DeprecationWarning:google.api
     ignore::DeprecationWarning:google.cloud
+    ignore::DeprecationWarning:google.rpc
+    ignore::DeprecationWarning:google.type
+    ignore::DeprecationWarning:urllib3
