--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -3,6 +3,9 @@ dispatch:
 - url: "www.thebluealliance.com/"  # Just the homepage
   service: py3-web
 
+- url: "www.thebluealliance.com/about"
+  service: py3-web
+
 # Python 3 Migration
 - url: "py3.thebluealliance.com/api/*"
   service: py3-api
