--- a/ops/standalone/dispatch-empty.yaml
+++ b/ops/standalone/dispatch-empty.yaml
@@ -1,4 +1,11 @@
 dispatch:
+  # Start serving certain pages from py3
+  - url: "www.thebluealliance.com/"  # Just the homepage
+    service: py3-web
+
+  - url: "www.thebluealliance.com/about"
+    service: py3-web
+
   # Python 3 Migration
   - url: "py3.thebluealliance.com/api/*"
     service: py3-api
