--- a/ops/standalone/dispatch-empty.yaml
+++ b/ops/standalone/dispatch-empty.yaml
@@ -5,6 +5,12 @@ dispatch:
 
   - url: "www.thebluealliance.com/about"
     service: py3-web
+    
+  - url: "www.thebluealliance.com/py3_css/*"
+    service: py3-web
+    
+  - url: "www.thebluealliance.com/py3_javascript/*"
+    service: py3-web
 
   # Python 3 Migration
   - url: "py3.thebluealliance.com/api/*"
