--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 gunicorn==20.0.4
 firebase_admin==4.5.0
 Flask==1.1.2
+Flask-Caching==1.9.0
 Flask-WTF==0.14.3
 google-api-python-client==1.12.8
 google-cloud-ndb==1.7.2
