--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,9 @@
 filterwarnings =
     ignore::DeprecationWarning:google.api
     ignore::DeprecationWarning:google.cloud
+    ignore::DeprecationWarning:google.iam
     ignore::DeprecationWarning:google.rpc
     ignore::DeprecationWarning:google.type
     ignore::DeprecationWarning:urllib3
+
+    ignore::UserWarning:flask_caching
