--- a/old_py2/ops/standalone/dispatch-empty.yaml
+++ b/old_py2/ops/standalone/dispatch-empty.yaml
@@ -1,4 +1,28 @@
 dispatch:
+  # Start serving certain pages from py3
+  - url: "www.thebluealliance.com/"  # Just the homepage
+    service: py3-web
+
+  - url: "www.thebluealliance.com/about"
+    service: py3-web
+    
+  - url: "www.thebluealliance.com/py3_css/*"
+    service: py3-web
+    
+  - url: "www.thebluealliance.com/py3_javascript/*"
+    service: py3-web
+
+  # Python 3 Migration
+  - url: "py3.thebluealliance.com/api/*"
+    service: py3-api
+
+  - url: "py3.thebluealliance.com/*"
+    service: py3-web
+
+  # Beta PWA
+  - url: "beta.thebluealliance.com/*"
+    service: pwa-ssr
+
   # Send everything to default module
   - url: "*/"
     service: default
