--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -174,16 +174,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
-      - name: Cache pip
-        uses: actions/cache@v2
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: ${{ runner.os }}-pip-
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r deploy_requirements.txt
       - name: Setup Google Cloud Platform
         uses: google-github-actions/setup-gcloud@master
         with:
