--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,28 +1,43 @@
 repos:
 - repo: local
   hooks:
+    # These run on the default stages (pre-commit)
     - id: py3-type
       name: "[py3] Type Checking"
       types: [file, python]
       entry: ./ops/typecheck_py3.sh
       language: script
+      stages: [commit]
     - id: py3-lint
       name: "[py3] Formatting & Linting"
       types: [file, python]
       entry: ./ops/lint_py3.sh --fix
       language: script
+      stages: [commit]
     - id: py3-test
       name: "[py3] Testing"
       types: [file, python]
       entry: ./ops/test_py3.sh --relevant
       language: script
+      stages: [commit]
     - id: node-lint
       name: "[node] Formatting & Linting"
       types: [file, javascript]
       entry: ./ops/lint_node.sh --fix
       language: script
+      stages: [commit]
     - id: node-test
       name: "[node] Testing"
       types: [file, javascript]
       entry: ./ops/test_node.sh
       language: script
+      stages: [commit]
+
+    # These run as post-checkout
+    - id: py3-deps
+      name: "[py3] Updating dependencies"
+      entry: ./ops/update_venv_deps.sh
+      language: script
+      always_run: true
+      stages: [post-checkout]
+
