turn off py3 in skeleton dispatch

--- a/ops/standalone/dispatch-empty.yaml
+++ b/ops/standalone/dispatch-empty.yaml
@@ -1,22 +1,22 @@
 dispatch:
   # Start serving certain pages from py3
-  - url: "www.thebluealliance.com/"  # Just the homepage
-    service: py3-web
+  #- url: "www.thebluealliance.com/"  # Just the homepage
+  #  service: py3-web
 
-  - url: "www.thebluealliance.com/about"
-    service: py3-web
+  #- url: "www.thebluealliance.com/about"
+  #  service: py3-web
 
-  - url: "www.thebluealliance.com/event*"
-    service: py3-web
+  #- url: "www.thebluealliance.com/event*"
+  #  service: py3-web
 
-  - url: "www.thebluealliance.com/teams"
-    service: py3-web
+  #- url: "www.thebluealliance.com/teams"
+  #  service: py3-web
 
-  - url: "www.thebluealliance.com/team/*"
-    service: py3-web
+  #- url: "www.thebluealliance.com/team/*"
+  #  service: py3-web
 
-  - url: "www.thebluealliance.com/match/*"
-    service: py3-web
+  #- url: "www.thebluealliance.com/match/*"
+  #  service: py3-web
     
   - url: "www.thebluealliance.com/py3_css/*"
     service: py3-web
