--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -3,54 +3,28 @@ name: On pull request
 on:
   pull_request:
     branches:
-      - py3
+      - master
 
 jobs:
-  lint:
-    name: Lint
+  py2-test:
+    name: "[py2] Test"
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v1
+      - uses: actions/checkout@v2
+      - name: Set up Python 2.7
+        uses: actions/setup-python@v2
         with:
-          python-version: 3.7
+          python-version: 2.7
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements_ci.txt
-          pip install -r src/requirements.txt
+          pip install -r travis_requirements.txt
       - name: Run Tests
-        run: ./ops/run_lint.sh
-  pyre:
-    name: Pyre
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.7
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements_ci.txt
-          pip install -r src/requirements.txt
-      - name: Run Tests
-        run: ./ops/run_pyre.sh
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - name: Set up Python 3.7
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.7
-      - name: Install Dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements_ci.txt
-          pip install -r src/requirements.txt
-      - name: Run Tests
-        run: ./ops/run_tests.sh
+        if: contains(github.event.commits[0].message, '[clowntown]') == false
+        run: paver test
