--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,6 +25,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r travis_requirements.txt
+      - name: Install GAE
+        run: |
+          wget https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.66.zip -nv
+          unzip -q google_appengine_1.9.66.zip -d $HOME
+          rm google_appengine_1.9.66.zip
+          echo "PYTHONPATH=${HOME}/google_appengine" >> $GITHUB_ENV
       - name: Run Tests
         if: contains(github.event.commits[0].message, '[clowntown]') == false
         run: paver test
