--- a/.github/workflows/pull_request_py2.yml
+++ b/.github/workflows/pull_request_py2.yml
@@ -24,6 +24,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install -r travis_requirements.txt
       - name: Install GAE
         run: |
