--- a/.github/workflows/pull_request_py2.yml
+++ b/.github/workflows/pull_request_py2.yml
@@ -32,13 +32,12 @@ jobs:
           unzip -q google_appengine_1.9.66.zip -d $HOME
           rm google_appengine_1.9.66.zip
           echo "PYTHONPATH=${HOME}/google_appengine" >> $GITHUB_ENV
-      - name: Install Libs
+      - name: Install Additional Libs
         run: paver install_libs
       - name: Run Tests
-        if: contains(github.event.commits[0].message, '[clowntown]') == false
         run: paver test
-  js-test:
-    name: "[js] test"
+  node-test:
+    name: "[node] test"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -55,5 +54,47 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Run Tests
-        if: contains(github.event.commits[0].message, '[clowntown]') == false
         run: npm test
+  make:
+    name: "Make"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 2.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 2.7
+      - uses: actions/checkout@v2
+      - name: Set up Node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: "8.x"
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+      - name: Install Python Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r travis_requirements.txt
+      - name: Install GAE
+        run: |
+          wget https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.66.zip -nv
+          unzip -q google_appengine_1.9.66.zip -d $HOME
+          rm google_appengine_1.9.66.zip
+          echo "PYTHONPATH=${HOME}/google_appengine" >> $GITHUB_ENV
+      - name: Install Additional Libs
+        run: paver install_libs
+      - name: Install Node Dependencies
+        run: npm install
+      - name: Make
+        run: paver make
