--- a/.github/workflows/pull_request_py2.yml
+++ b/.github/workflows/pull_request_py2.yml
@@ -6,6 +6,45 @@ on:
       - master
 
 jobs:
+  lint:
+    name: "Lint"
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Set up Python 2.7
+        uses: actions/setup-python@v2
+        with:
+          python-version: 2.7
+      - uses: actions/checkout@v2
+      - name: Set up Node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: "8.x"
+      - name: Cache pip
+        uses: actions/cache@v2
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: ${{ runner.os }}-pip-
+      - name: Cache node modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-
+      - name: Install Python Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install -r travis_requirements.txt
+      - name: Lint Python
+        run: paver lint --base ${{ github.head_ref }}
+      - name: Lint JS
+        run: npm run lint -s
+      - name: Validate Swagger
+        run: paver validate_swagger
+      - name: Validate Endpoints Configuration
+        run: paver make_endpoints_config
   py2-test:
     name: "[py2] Test"
     runs-on: ubuntu-latest
