--- a/.github/workflows/pull_request_py2.yml
+++ b/.github/workflows/pull_request_py2.yml
@@ -37,6 +37,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r travis_requirements.txt
+      - name: Install Node Dependencies
+        run: |
+          npm install
+          npm install -g gulp-cli uglify-es uglifycss less request tslib
       - name: Lint Python
         run: paver lint --base ${{ github.head_ref }}
       - name: Lint JS
@@ -65,14 +69,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r travis_requirements.txt
+          paver install_libs
       - name: Install GAE
         run: |
           wget https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.66.zip -nv
           unzip -q google_appengine_1.9.66.zip -d $HOME
           rm google_appengine_1.9.66.zip
           echo "PYTHONPATH=${HOME}/google_appengine" >> $GITHUB_ENV
-      - name: Install Additional Libs
-        run: paver install_libs
       - name: Run Tests
         run: paver test
   node-test:
@@ -125,14 +128,13 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -r travis_requirements.txt
+          paver install_libs
       - name: Install GAE
         run: |
           wget https://storage.googleapis.com/appengine-sdks/featured/google_appengine_1.9.66.zip -nv
           unzip -q google_appengine_1.9.66.zip -d $HOME
           rm google_appengine_1.9.66.zip
           echo "PYTHONPATH=${HOME}/google_appengine" >> $GITHUB_ENV
-      - name: Install Additional Libs
-        run: paver install_libs
       - name: Install Node Dependencies
         run: |
           npm install
