--- a/.github/workflows/pull_request_py2.yml
+++ b/.github/workflows/pull_request_py2.yml
@@ -48,6 +48,7 @@ jobs:
           unzip -q google_appengine_1.9.66.zip -d $HOME
           rm google_appengine_1.9.66.zip
           echo "PYTHONPATH=${PYTHONPATH}:${HOME}/google_appengine" >> $GITHUB_ENV
+          echo "PATH=${PATH}:${HOME}/google_appengine" >> $GITHUB_ENV
       - name: Lint Python
         run: paver lint --base ${{ github.head_ref }}
       - name: Lint JS
@@ -83,6 +84,7 @@ jobs:
           unzip -q google_appengine_1.9.66.zip -d $HOME
           rm google_appengine_1.9.66.zip
           echo "PYTHONPATH=${PYTHONPATH}:${HOME}/google_appengine" >> $GITHUB_ENV
+          echo "PATH=${PATH}:${HOME}/google_appengine" >> $GITHUB_ENV
       - name: Run Tests
         run: paver test
   node-test:
@@ -142,6 +144,7 @@ jobs:
           unzip -q google_appengine_1.9.66.zip -d $HOME
           rm google_appengine_1.9.66.zip
           echo "PYTHONPATH=${PYTHONPATH}:${HOME}/google_appengine" >> $GITHUB_ENV
+          echo "PATH=${PATH}:${HOME}/google_appengine" >> $GITHUB_ENV
       - name: Install Node Dependencies
         run: |
           npm install
