Don't use gcloud beta
[clowntown]

--- a/.github/workflows/push_py2.yml
+++ b/.github/workflows/push_py2.yml
@@ -167,16 +167,16 @@ jobs:
       - name: Make
         run: paver make
       - name: Deploy app.yaml
-        run: gcloud beta app deploy app.yaml --version prod-2 --quiet
+        run: gcloud app deploy app.yaml --version prod-2 --quiet
       - name: Deploy index.yaml
-        run: gcloud beta app deploy index.yaml --version prod-2 --quiet
+        run: gcloud app deploy index.yaml --version prod-2 --quiet
       - name: Deploy queue.yaml
-        run: gcloud beta app deploy queue.yaml --version prod-2 --quiet
+        run: gcloud app deploy queue.yaml --version prod-2 --quiet
       - name: Overwrite YAMLs with skeleton deploy
         run: |
           mv -f ./ops/standalone/cron-skeleton.yaml ./cron.yaml
           mv -f ./ops/standalone/dispatch-empty.yaml ./dispatch.yaml
       - name: Deploy cron.yaml
-        run: gcloud beta app deploy cron.yaml --version prod-2 --quiet
+        run: gcloud app deploy cron.yaml --version prod-2 --quiet
       - name: Deploy dispatch.yaml
-        run: gcloud beta app deploy dispatch.yaml --version prod-2 --quiet
+        run: gcloud app deploy dispatch.yaml --version prod-2 --quiet
