Revert "Revert dispatch.yaml to point to py2 site (#3442)"
This reverts commit b1f6d4e884e138650b6e933e5cefb622d014c53c.

--- a/dispatch.yaml
+++ b/dispatch.yaml
@@ -6,12 +6,12 @@ dispatch:
 - url: "www.thebluealliance.com/about"
   service: py3-web
 
-# # Python 3 Migration
-# - url: "py3.thebluealliance.com/api/*"
-#   service: py3-api
-#
-# - url: "py3.thebluealliance.com/*"
-#   service: py3-web
+# Python 3 Migration
+- url: "py3.thebluealliance.com/api/*"
+  service: py3-api
+
+- url: "py3.thebluealliance.com/*"
+  service: py3-web
 
 # Beta PWA
 - url: "beta.thebluealliance.com/*"
