wip for dynamic ndb cache expirations

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+markers =
+    no_auto_ndb_context
 filterwarnings =
     ignore::DeprecationWarning:google.api
     ignore::DeprecationWarning:google.cloud
