--- a/ops/standalone/dispatch-empty.yaml
+++ b/ops/standalone/dispatch-empty.yaml
@@ -9,6 +9,9 @@ dispatch:
   - url: "www.thebluealliance.com/event/*"
     service: py3-web
 
+  - url: "www.thebluealliance.com/events*"
+    service: py3-web
+
   - url: "www.thebluealliance.com/teams"
     service: py3-web
 
