--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "yargs": "^16.2.0"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack",
+    "dev": "cross-env NODE_ENV=development webpack --watch",
     "build": "cross-env NODE_ENV=production webpack",
     "test": "jest",
     "lint": "eslint .",
