Add Storage client (local + Google)

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,8 @@ src/backend/web/static/javascript/tba_js/tba_keys.js
 node_modules/
 
 ops/dev/keys/
+# Check in empty storage folder, ignore everythign in folder
+ops/dev/storage/*
+!ops/dev/storage/.gitkeep
 src/backend/web/static/javascript/tba_js/tba_keys.js
 tba_dev_config.local.json
