--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "tba-gameday",
+  "name": "tba-react",
   "version": "0.0.0",
   "dependencies": {
-    "@babel/core": "^7.13.16",
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "babel-polyfill": "^6.8.0",
     "classnames": "^2.3.1",
     "element-resize-event": "^3.0.3",
     "firebase": "^8.4.1",
     "firedux": "^1.1.0",
     "heatmap.js": "^2.0.5",
+    "less-loader": "^8.1.1",
     "material-ui": "^0.20.2",
     "prettier": "^2.2.1",
+    "process": "^0.11.10",
     "prop-types": "^15.5.10",
     "query-string": "^7.0.0",
     "react": "^15.7.0",
@@ -38,10 +35,17 @@
     "underscore": "^1.13.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "enzyme": "^3.11.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
@@ -49,27 +53,26 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
-    "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-debug": "^4.0.0",
-    "gulp-if": "^3.0.0",
-    "gulp-less": "^4.0.1",
-    "gulp-rename": "^2.0.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "gulp-uglify-es": "^2.0.0",
     "jest-cli": "^26.6.3",
     "less": "3.13.0",
     "md5": "^2.3.0",
+    "postcss": "^8.2.12",
+    "postcss-loader": "^5.2.0",
     "react-addons-test-utils": "^15.3.0",
     "react-test-renderer": "^15.7.0",
+    "style-loader": "^2.0.0",
     "uglifycss": "0.0.29",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^4.0.0",
+    "webpack": "^5.35.1",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
     "yargs": "^16.2.0"
   },
   "scripts": {
-    "build": "gulp build --production",
+    "dev": "cross-env NODE_ENV=development webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "jest",
     "lint": "eslint .",
     "lintfix": "eslint --fix ."
