--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "less-loader": "^8.1.1",
     "material-ui": "^0.20.2",
     "prettier": "^2.2.1",
-    "process": "^0.11.10",
     "prop-types": "^15.5.10",
     "query-string": "^7.0.0",
     "react": "^15.7.0",
@@ -23,16 +22,13 @@
     "react-event-listener": "^0.6.6",
     "react-file-input": "^0.2.5",
     "react-ga": "^3.3.0",
-    "react-native-listener": "^1.0.1",
     "react-redux": "^5.1.2",
     "react-select": "^2.4.4",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^4.1.0",
     "redux-thunk": "^2.0.1",
     "reselect": "^4.0.0",
-    "swagger-client": "3.13.2",
-    "swagger-ui": "^3.48.0",
-    "underscore": "^1.13.1"
+    "swagger-ui": "^3.48.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -40,35 +36,20 @@
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "babelify": "^10.0.0",
-    "browserify": "^17.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.4",
-    "enzyme": "^3.11.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "jest-cli": "^26.6.3",
     "less": "4.1.1",
     "md5": "^2.3.0",
-    "postcss": "^8.2.13",
-    "postcss-loader": "^5.2.0",
-    "react-addons-test-utils": "^15.3.0",
-    "react-test-renderer": "^15.7.0",
+    "process": "^0.11.10",
     "style-loader": "^2.0.0",
-    "uglifycss": "0.0.29",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^2.0.0",
-    "watchify": "^4.0.0",
     "webpack": "^5.36.1",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2",
-    "yargs": "^16.2.0"
+    "webpack-cli": "^4.6.0"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --watch",
