Use webpack over gulp+browserify

--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "tba-gameday",
   "version": "0.0.0",
   "dependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
     "babel-polyfill": "^6.8.0",
     "classnames": "^2.2.3",
     "element-resize-event": "^2.0.9",
@@ -37,10 +33,17 @@
     "underscore": "^1.8.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/preset-env": "^7.14.0",
+    "@babel/preset-react": "^7.13.13",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^24.8.0",
+    "babel-loader": "^8.2.2",
     "babelify": "^10.0.0",
     "browserify": "^13.0.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.4",
     "enzyme": "^2.4.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -57,17 +60,24 @@
     "gulp-uglify-es": "^2.0.0",
     "jest-cli": "^24.8.0",
     "less": "3.10.3",
+    "less-loader": "^8.1.1",
     "md5": "^2.2.1",
+    "process": "^0.11.10",
     "react-addons-test-utils": "^15.3.0",
     "react-test-renderer": "^15.3.0",
+    "style-loader": "^2.0.0",
     "uglifycss": "0.0.27",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^2.0.0",
     "watchify": "^3.7.0",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
     "yargs": "^6.5.0"
   },
   "scripts": {
-    "build": "gulp build",
+    "dev": "cross-env NODE_ENV=development webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
     "test": "jest",
     "lint": "eslint --ext js react",
     "fixlint": "eslint --fix --ext js react"
