Port event teams trusted API

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,7 @@
 markers =
     no_auto_ndb_context
 filterwarnings =
+    ignore::DeprecationWarning:flask_caching
     ignore::DeprecationWarning:google.api
     ignore::DeprecationWarning:google.cloud
     ignore::DeprecationWarning:google.iam
