--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ gunicorn==20.1.0
 firebase_admin==5.0.0
 Flask==2.0.1
 Flask-Caching==1.10.1
+Flask-Cors==3.0.10
 Flask-WTF==0.15.1
 google-api-python-client==2.7.0
 google-cloud-ndb==1.8.0
