--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tba-react",
   "version": "0.0.0",
+  "engines": {
+    "node": "^14"
+  },
   "dependencies": {
     "classnames": "^2.3.1",
     "element-resize-event": "^3.0.3",
