--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -160,7 +160,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: "10.x"
+          node-version: "14"
       - name: Cache node modules
         uses: actions/cache@v2
         with:
