--- a/ops/dev/docker/Dockerfile
+++ b/ops/dev/docker/Dockerfile
@@ -39,7 +39,7 @@ RUN apt-get update && apt-get install -y \
 # Set up nvm and nodejs
 ENV NVM_DIR /nvm
 ENV NODE_VERSION 14
-RUN wget -qO- https://raw.githubusercontent.com/creationix/nvm/v0.33.2/install.sh | bash \
+RUN wget -qO- https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash \
     && . $NVM_DIR/nvm.sh \
     && nvm install $NODE_VERSION --silent \
     && nvm alias default $NODE_VERSION \
