--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -82,7 +82,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: "10.x"
+          node-version: "14"
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -101,7 +101,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: "10.x"
+          node-version: "14"
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -152,7 +152,7 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: "10.x"
+          node-version: "14"
       - name: Cache node modules
         uses: actions/cache@v2
         with:
