--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,6 +8,7 @@ google-cloud-ndb==1.8.0
 google-cloud-storage==1.38.0
 google-cloud-tasks==2.2.0
 grpcio==1.37.1
+Jinja2==2.11.3
 numpy==1.20.2
 oauth2client==4.1.3
 pyre-extensions==0.0.21
@@ -15,3 +16,4 @@ requests==2.25.1
 rq==1.8.0
 typing-extensions==3.10.0.0
 PyYAML==5.4.1
+Werkzeug==1.0.1
