--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "md5": "^2.3.0",
     "process": "^0.11.10",
     "style-loader": "^3.3.1",
+    "ts-migrate": "^0.1.19",
+    "typescript": "^4.2.4",
     "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1"
   },
