--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
+    "@types/jest": "^26.0.23",
+    "@types/material-ui": "^0.21.8",
+    "@types/react": "^17.0.5",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.0",
     "eslint": "^8.1.0",
