--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ Flask-Caching==1.10.1
 Flask-Cors==3.0.10
 Flask-WTF==0.15.1
 google-api-python-client==2.23.0
+google-auth==1.30.0
 google-cloud-ndb==1.10.0
 google-cloud-storage==1.42.3
 google-cloud-tasks==2.5.2
