--- a/src/web.yaml
+++ b/src/web.yaml
@@ -5,6 +5,7 @@ entrypoint: gunicorn -b :$PORT backend.web.main:app
 instance_class: F1
 automatic_scaling:
   max_idle_instances: 1
+  max_instances: 1
 
 handlers:
   - url: /py3_css
