Ensure we use x86 Ubuntu image for Docker image

--- a/ops/dev/docker/Dockerfile
+++ b/ops/dev/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:latest
+FROM --platform=linux/x86_64 ubuntu:latest
 MAINTAINER The Blue Alliance
 
 # Set debconf to run non-interactively
