Revert "Ensure we use x86 Ubuntu image for Docker image (#3851)"
This reverts commit 55026199b13cece8d9b8fd6fd2a33b95f8c48d64.

--- a/ops/dev/docker/Dockerfile
+++ b/ops/dev/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=linux/x86_64 ubuntu:latest
+FROM ubuntu:latest
 MAINTAINER The Blue Alliance
 
 # Set debconf to run non-interactively
