--- a/ops/standalone/dispatch-empty.yaml
+++ b/ops/standalone/dispatch-empty.yaml
@@ -8,12 +8,12 @@ dispatch:
 
   - url: "www.thebluealliance.com/events"
     service: py3-web
- 
-  - url: "www.thebluealliance.com/events/*/insights"
-    service: default
 
   - url: "www.thebluealliance.com/events/*"
     service: py3-web
+ 
+  - url: "www.thebluealliance.com/event/*/insights"
+    service: default
 
   - url: "www.thebluealliance.com/event/*"
     service: py3-web
