--- a/src/api.yaml
+++ b/src/api.yaml
@@ -1,6 +1,7 @@
 service: py3-api
 runtime: python38
 entrypoint: gunicorn -b :$PORT backend.api.main:app
+app_engine_apis: true
 
 instance_class: F1
 automatic_scaling:
