--- a/src/tasks_io.yaml
+++ b/src/tasks_io.yaml
@@ -1,6 +1,7 @@
 service: py3-tasks-io
 runtime: python38
 entrypoint: gunicorn -b :$PORT backend.tasks_io.main:app
+app_engine_apis: true
 
 instance_class: F1
 automatic_scaling:
