--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ beautifulsoup4==4.10.0
 black==21.11b1
 flake8==4.0.1
 flake8-import-order
+flake8-tidy-imports
 blinker==1.4
 fakeredis
 freezegun==1.1.0
