--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ markers =
     no_auto_ndb_context
 filterwarnings =
     ignore::DeprecationWarning:flask_caching
+    ignore::DeprecationWarning:google.appengine
     ignore::DeprecationWarning:google.api
     ignore::DeprecationWarning:google.cloud
     ignore::DeprecationWarning:google.iam
