--- a/src/tasks_io.yaml
+++ b/src/tasks_io.yaml
@@ -8,5 +8,8 @@ automatic_scaling:
   max_idle_instances: 1
 
 handlers:
+  - url: /_ah/queue/deferred.*
+    script: auto
+    login: admin
   - url: .*
     script: auto
