Create keys file

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -183,6 +183,8 @@ jobs:
           pip install requests
       - name: Install Vagrant
         run: sudo apt-get install vagrant
+      - name: Create keys file
+        run: cp tba_keys_template.js tba_keys.js
       - name: Start Container
         run: vagrant up
       - name: Test Fullstack
