Fix key creation in fullstack test

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -205,7 +205,7 @@ jobs:
         run: sudo apt-get install vagrant
       - name: Create keys file
         if: contains(github.event.commits[0].message, '[clowntown]') == false
-        run: cp tba_keys_template.js tba_keys.js
+        run: cp ./src/backend/web/static/javascript/tba_js/tba_keys_template.js ./src/backend/web/static/javascript/tba_js/tba_keys.js
       - name: Start Container
         if: contains(github.event.commits[0].message, '[clowntown]') == false
         run: ENV='CI' vagrant up
